# python-project-lvl2

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  pyci.yml  tests.yml
gendiff/: cli.py  diff.py  diff_generator.py  files.py  generator.py  nodes.py  parsers.py
gendiff/format/: __init__.py  default.py  plain.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: expected.py  test_basics.py  test_gendiff.py  test_json_diff.py  test_yaml_diff.py
tests/fixtures/: flat_out_json.json  nested_out_json.json  uncorrect.yml
