[tool.poetry]
name = "hexlet-code"
version = "0.1"
description = "Show diff between two files."

authors = ["ilitili <momcoveylebozo@gmail.com>"]
packages = [{ include = "gendiff" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    ]


[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.8.3"
isort = "4.3.21"


[tool.poetry.dev-dependencies]
pytest = "^5.3"
wemake-python-styleguide = "^0.13.2"
codeclimate-test-reporter = "^0.2.3"
pytest-cov = "=2.4.0"
coverage = "=4.3.4"
PyYAML = "^5.3"
pylint = "^2.4"
rope = "^0.17.0"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
